# chinese-chess

OpenGL/: CMakeLists.txt
OpenGL/shaders/model/: model.frag  singleColorModel.frag
OpenGL/src/: chess.cpp  chess.h  chessboard.cpp  chessboard.h  controller.cpp  controller.h  headers.h  listener.cpp  listener.h  main.cpp  object.cpp
docs/: 软件设计文档.docx
server/: protocol.md
server/src/: chess.cpp
web/src/components/pages/Home/: Home.vue
web/src/router/: index.js
